21 Oct, 2018
fix: timesann not updating announce.php
update: set default userid userdetails.php
fix: don't show pager menu when only 1 page browse.php
add: missing torrents/users 
fix: user notification on upload to their defaul categories
update: fluentpdo, php-cs-fixer, flysystem, node-sass
fix: peers not always deleting on stop announce.php
fix: happy hour
fix: properly clear torrent caches when deleting or adding

20 Oct, 2018
fix: edit admin pages select current staffpanel.php
remove: file_put_contents logging
fix: php_info display system_view.php
update: a few more of the admin pages
add: missing file promo.php
update: most of the admin pages
fix: bug bugs.php
update: don't show pager when not more than 1 page staffbox.php, bugs.php
update: align checkboxes upload.php
update: SCEditor style
update: missing tags from breadcrumbs

18 Oct, 2038
update: FluentPDO, Flysystem, Sass, PostCSS, autoprefixer, node-sas
update: version number package.json
fix: news block icon size
fix: iterate only numeric template folders uglify.php
fix: call image_proxy with width/height when bbcode image tag includes width/height
fix: db insert Post.php
update: missing tags from breadcrumbs

14 Oct, 2018
add: lighter template WIP - will need to rethink AJAX Chat templates
rewrite: breadcrumbs, WIP
replace: get all users with ajax user lookup send_message.php
replace: markItUp.js with SCEditor.js WYSIWYG Editor
remove: jquery.mousewheel.js
move: jquery.flexslider.js to npm
move: tooltipster.js to npm
remove .htaccess files as nginx ignores them
add: new base template
move: themeChanger into template folder to allow modification per template
replace: FormManager.js with genres_show_hide.js
replace: jquery.validator.js with html5 validation
fix: Adminer link in navbar
remove: ipToStorageFormat function

11 Oct, 2018
fix: site_settings.php

10 Oct, 2018
fix: announce.php

02 Sept, 2018
update: database files
remove: image proxy key
update: remove leading dots in cookie_domain example